[metadata]
name = kasushi
version = 0.0.1
author = paris-ci
author_email = site-pipy@api-d.com
description = Building blocks and utility extensions for discord.py bots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paris-ci/kasushi
project_urls =
    Bug Tracker = https://github.com/paris-ci/kasushi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = kasushi
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src